[tool.poetry]
name = "pdom2-poetry"
version = "0.1.0"
description = ""
authors = ["Alex-LvUA <152178469+Alex-LvUA@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
